--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,1 +1,35 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: dotnetsample-deployment
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: dotnetsample
+  template:
+    metadata:
+      labels:
+        app: dotnetsample
+    spec:
+      containers:
+      - name: dotnetsample-container
+        image: hasanalperen/dotnetsample
+        ports:
+        - containerPort: 80
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: dotnetsample-service
+spec:
+  selector:
+    app: dotnetsample
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
 
